--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Seyyah</title>
 
     <script type="text/javascript" src="js/phaser.min.js"></script>
+    <script type="text/javascript" src="js/modal.js"></script>
     <script type="text/javascript" src="js/Boot.js"></script>
     <script type="text/javascript" src="js/Preload.js"></script>
     <script type="text/javascript" src="js/Game.js"></script>
@@ -16,6 +17,7 @@
             margin: 0px;
         }
     </style>
+</head>
 </head>
 
 <body>
